welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:9: error: value recule is not a member of Unit
	recule recule(nbPas)
               ^